# PADDLE

./: PADDLE_predictions.ipynb  paddle.py  pyproject.toml
mn_data/: HSF-1.a3m  HSF-1.fa.horiz  HSF-1.fa.txt  HSF-1.fasta  HSF-1.mtx  HSF-1.sing  HSF-1.ss  HSF-1.ss2  HSF-1_long.result  HSF-1_short.result
